Fixed heart icon on Mobile view

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -33,4 +33,9 @@
   .card__image {
     height: 288px;
   }
+
+  .card__like-btn {
+    width: 20px;
+    height: 18px;
+  }
 }
